--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'java'
     id "io.freefair.lombok" version "8.2.2"
-}
+
+    }
 
 group 'ru.netology'
 version '1.0-SNAPSHOT'
@@ -16,8 +17,12 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
-    testImplementation 'com.codeborne:selenide:6.17.2'
-    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'com.codeborne: selenide: 6.17.2'
+    testImplementation 'com.github.javafaker: javafaker: 1.0.2'
+    testCompileOnly 'org.projectLombok:lombok:1.18.24'
+    testAnnotationProcessor 'org.progectLombok:1.18.24'
+    testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.3'
+
 }
 
 test {
