--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id "io.freefair.lombok" version "8.2.2"
+    id "io.freefair.lombok" version "8.6"
 
     }
 
@@ -18,12 +18,19 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     testImplementation 'com.codeborne:selenide:6.17.2'
-    testImplementation 'com.github.javafaker:javafaker:1.0.2'
-    testCompileOnly 'org.projectLombok:lombok:1.18.24'
-    testAnnotationProcessor 'org.progectLombok:1.18.24'
-    testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.3'
 
-}
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+
+    //compileOnly 'org.projectlombok:lombok:1.18.32'
+    //annotationProcessor 'org.projectlombok:lombok:1.18.32'
+
+    //testCompileOnly 'org.projectlombok:lombok:1.18.32'
+    //testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
+
+
+
+
+    }
 
 test {
     useJUnitPlatform()
