--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
 
+    testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.3'
+
     //compileOnly 'org.projectlombok:lombok:1.18.32'
     //annotationProcessor 'org.projectlombok:lombok:1.18.32'
 
