--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,9 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     testImplementation 'com.codeborne:selenide:6.17.2'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
-    testRuntimeOnly 'org.slf4j:slf4j-simple:1.7.32'
+    //testRuntimeOnly 'org.slf4j:slf4j-simple:1.7.32'
     testImplementation 'io.qameta.allure:allure-selenide:2.20.1'
+    //testCompileOnly 'org.project:lombok:1.18.26'
     }
 
 test {
